# epb-home-energy-model

./: .gitignore  Cargo.toml
.claude/: settings.json
.github/workflows/: modelling-service.yml  test.yml
docs/: STATUS.md  modelling-service-api.md
docs/design/: modelling-service-design.md
hem-api/: Cargo.toml
hem-api/src/: lib.rs
hem-profiles/: Cargo.toml
hem-profiles/archetypes/: detached_bungalow_uk.json  flat_new_build_uk.json
hem-profiles/src/: lib.rs
hem-server/: Cargo.toml
hem-server/src/: main.rs
hem-web/: Cargo.toml  README.md  index.html
hem-web/src/: main.rs
src/core/: solvers.rs
src/core/heating_systems/: emitters.rs
src/core/space_heat_demand/: ventilation.rs
tests/: e2e.rs
