[package]
name = "hem-server"
version = "0.1.0"
edition = "2021"
description = "HTTP transport (Axum) for the HEM modelling service; thin wrapper over hem-api"

[dependencies]
hem-api = { path = "../hem-api" }
hem-profiles = { path = "../hem-profiles" }
axum = "0.8.1"
tower-http = { version = "0.6", features = ["fs"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde_json = "1.0.150"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
