[package]
name = "hem-web"
version = "0.1.0"
edition = "2021"
description = "Rust->WASM (Yew) frontend for the HEM modelling service; built with trunk, served by hem-server"
# Deliberately NOT a workspace member (see the root Cargo.toml `exclude`): this crate targets
# wasm32-unknown-unknown and is bundled with `trunk`, so it keeps its own dependency resolution.

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement", "EventTarget"] }

[profile.release]
opt-level = "s"
lto = true
